docs: add new api documentation
